# PythonCore-Lessons

./: 1.py  HW6.py  README.md  add_lesson.py  dict.json  logs.txt  name_main1.py  name_main2.py
HW6/: HW6.py  HW6W copy.py  HW6W.py  HW6_script.py  create_folders.py  dict.json  folders.txt  normalize.py  sort.py  structure.py  suffix.py
HW7_clean_folder_Levkovski/: LICENSE.txt  README.md  setup.cfg  setup.py
HW7_clean_folder_Levkovski/src/: HW6.py  dict.json
HW7_clean_folder_Levkovski/src/HW7_clean_folder_Levkovski.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
HW8/: 1.py  HW8W.py  HW8W1.py  add_lesson8.py  def_DB.py  employees.txt  get_str_period.py
lesson2/: lesson2.1.py  lesson2.2.py  lesson2.py  lesson2_14.py  lesson2_auto_hw.py
lesson3/: lesson3.0.py  lesson3.1.py  lesson3.2.py  lesson3_auto_hw.py
lesson4/: lesson4.0.addmat.py  lesson4.0.py  lesson4.1.py  lesson4.2.py  lesson4_auto_hw.py
lesson5/: lesson5.0.addmat.py  lesson5.0.py  lesson5.1.py  lesson5.2.py  lesson5_auto_hw.py
lesson6/: Business_List.html  big_text_6.2.txt  lesson6.0.1.txt  lesson6.0.2.txt  lesson6.0.addmat.py  lesson6.0.py  lesson6.1.py  lesson6.2.py  prog_language_6.2.txt  test6.1.txt  test6.2.txt  test6.3_reverse.txt
lesson7/: lesson7_0.py  lesson7_1.py  lesson7_2.py  my_module.py  requirements.txt
lesson7/project_7_2/our_project/: LICENSE.txt  README.md  setup.cfg
lesson7/project_7_2/our_project/src/add/: adding.py
lesson7/project_7_2/our_project/src/our_project.egg-info/: PKG-INFO  SOURCES.txt
lesson7/project_7_2/our_project/tests/: test_add.py
(+59 files in other folders)
