[metadata]
name = HW7_clean_folder_Levkovski
version = 0.0.1
author = Levkovskyi Oleksandr
author_email = olevkowsky@gmail.com
description = A script that parses the junk folder
long_description = file: README.md, LICENSE.txt
url = https://olevkowsky.github.io/HW7_clean_folder/
project_urls =
    repository = https://olevkowsky.github.io/HW7_clean_folder/
classifiers =
    Programming Language :: Python :: 3
    License :: MIT License
    Operating System :: OS Independent

[options]
package_dir = srs
packages = find:
python_requires = >= 3.10

[options.packages.find]
where = src
