[metadata]
name = our_project
version = 0.0.1
author = developer
author_email = my_email@gmail.com
description = Some programe
long_description = file: README.md, LICENSE.txt
url = https://github.com/our_project
project_urls = 
    Bug Tracker = https://github.com/our_project/bugs
    repository = https://github.com/our_project
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[option]
package_dir = src
packages = find:
python_requires = >= 3.8

[options.packages.find]
where = src
